Fixed overflow issue by moving the UI into a flexbox Index.html + Made new flexbox container for the body ~ Moved background to flexbox

--- a/style.css
+++ b/style.css
@@ -1,26 +1,41 @@
 .container {
     width: 100%;
-    max-width:800px;
-	height: 100vh;
+    height: 100%;
 	
-	position: absolute;
+	position: relative;
 	top:0;
 	left: 0;
 	right: 0;
   	
     margin: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    overflow-y: auto;
     
+}
+
+.flexbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background-image:url(images/background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .card{
     border-radius: 20px;
     background-color: rgba(255,255,255,0.8);
-    margin:20px;
+    margin-top: auto;
+    margin-bottom: auto;
     padding:20px;
+    max-width: 800px;
 
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 
     box-shadow: 10px 10px 20px rgba(0,0,0,0.3);
     
